2013-07-26  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
            Richard Earnshaw  <richard.earnshaw@arm.com>

	* combine.c (simplify_comparison): Re-canonicalize operands
	where appropriate.	
	* config/arm/arm.md (movcond_addsi): New splitter.

2013-07-25  Sterling Augustine  <saugustine@google.com>

	* dwarf2out.c (size_of_pubnames): Move code to...
	(include_pubname_in_output): ...here.  New.
	(want_pubnames): Rearrange.
	(output_pubnames): Call include_pubname_in_output.  Move assertion.

2013-07-25  Cameron McInally  <cameron.mcinally@nyu.edu>

	* doc/extend.texi: Fix return types for __builtin_ia32_cmp*s builtins.

2013-07-25  Cameron McInally  <cameron.mcinally@nyu.edu>

	PR target/38836
	* doc/extend.texi: Remove obsolete builtins. Fix
	typo for __builtin_ia32_loadss and __builtin_ia32_cmpnltss.

2013-07-25  Jan Hubicka  <jh@suse.cz>

	* cgraph.c (release_function_body): Break out from ...
	(cgraph_release_function_body): ... this one; also release DECL_RESULT
	and DECL_ARGUMENTS.
	* ipa-cp.c (get_replacement_map): Add parm_num argument; do not set
	old_tree in the map.
	(create_specialized_node): Update.
	* lto-cgraph.c (output_node_opt_summary): Do not translate old_tree
	into index.
	* cgraphclones.c (cgraph_create_virtual_clone): Do not copy
	DECL_ARGUMENTS, DECL_INITIAL and DECL_RESULT.
	* ipa-prop.c (ipa_populate_param_decls): Look for origin of clones.
	* tree-inline.c (initialize_cfun): Initialize DECL_ARGUMENTS and
	DECL_RESULT.

2013-07-25  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/arm/arm.md (arm_addsi3, addsi3_carryin_<optab>,
	addsi3_carryin_alt2_<optab>): Correct output template.

2013-07-25  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/arm/arm-fixed.md (ssmulsa3, usmulusa3):
	Adjust for arm_restrict_it.
	Remove trailing whitespace.

2013-07-25  Mark Kettenis  <kettenis@openbsd.org>

	* config/pa/pa.c (pa_trampoline_init): Emit __enable_execute_stack
	libcall if HAVE_ENABLE_EXECUTE_STACK is defined.
