@@ -1,3 +1,7 @@
+2013-07-26  Ian Bolton  <ian.bolton@arm.com>
+
+	* gcc.target/aarch64/neg_1.c: New test.
+
 2013-07-25  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/57966
